fixtures/invalid/module-boundary-direct/src/features/tasks/server/create-task.ts
export function createTask(): void {
  // Synthetic fixture handler. The compiler must discover, not execute, it.
}
